--- a/exercícios/Ex - 023 - criando tabela/tabela001.html
+++ b/exercícios/Ex - 023 - criando tabela/tabela001.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeira Tabela</title>
     <style>
+        table{
+            width: 400px;
+            height: 400px;
+            margin: auto;
+        }
         tr > td{
             border: 1px solid black;
             padding: 2px;
+            vertical-align: top;
+            text-align: center;
         }
     </style>
 </head>
